syntax = "proto3";

package envoy.type;

import "validate/validate.proto";

option java_package = "io.envoyproxy.envoy.type";
option java_outer_classname = "HttpStatusProto";
option java_multiple_files = true;

// [#protodoc-title: GRPC status codes]

// GRPC response codes supported.
enum Status {
  OK = 0;
  CANCELED = 1;
  UNKNOWN = 2;
  INVALID_ARGUMENT = 3;
  DEADLINE_EXCEEDED = 4;
  NOT_FOUND = 5;
  ALREADY_EXISTS = 6;
  PERMISSION_DENIED = 7;
  RESOURCE_EXHAUSTED = 8;
  FAILED_PRECONDITION = 9;
  ABORTED = 10;
  OUT_OF_RANGE = 11;
  UNIMPLEMENTED = 12;
  INTERNAL = 13;
  UNAVAILABLE = 14;
  DATA_LOSS = 15;
  UNAUTHENTICATED = 16;
}

// GRPC status.
message GrpcStatus {
  // Supplies GRPC response code.
  Status status = 1 [(validate.rules).enum = {defined_only: true not_in: 0}];
}
